src/test/ui/unconstrained-none.stderr
error[E0282]: type annotations needed
  --> $DIR/unconstrained-none.rs:14:5
   |
LL |     None; //~ ERROR type annotations needed [E0282]
   |     ^^^^ cannot infer type for `T`

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0282"
